--- a/Shop/app/templates/app/basket.html
+++ b/Shop/app/templates/app/basket.html
@@ -2,6 +2,7 @@
 {%block content%}
 <h3 class="text-center">Корзина {%if not basket.products.count%} пуста</h3>
 {%else%}
+
 <table class="table">
   <thead>
     <tr>
@@ -17,8 +18,11 @@
 
     <tr>
       <th scope="row"><strong>{{basketproduct.product.title}}</strong></th>
-      <td></td>
-      <td>@mdo</td>
+      <td>{{basketproduct.product.image}}</td>
+      <td>{{basketproduct.product.price}}</td>
+      <td>{{basketproduct.quantity}}</td>
+      <td>{{basketproduct.final_price}}</td>
+      <td><button class="btn btn-outline-dark" type="submit">Удалить товар</button></td>
     </tr>
   {%endfor%}
   </tbody>
