--- a/app/templates/app/basket.html
+++ b/app/templates/app/basket.html
@@ -35,6 +35,7 @@
   {%endfor%}
   </tbody>
 </table>
+
+<a href="{%url 'order'%}"><button class="btn btn-outline-dark" type="submit">Купить</button></a>
 {%endif%}
-<a href="{%url 'make_order'%}"><button class="btn btn-outline-dark" type="submit">Купить</button></a>
 {%endblock%}
