--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="#!">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="{%url 'help'%}">Помощь</a></li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                        data-bs-toggle="dropdown" aria-expanded="false">Shop</a>
@@ -68,7 +68,7 @@
             <div class="col-md-4 mb-4">
                 <div class="card h-100">
                     <!-- Product image-->
-                    <a href="{{product.get_absolute_url}}"><img class="card-img-top" src="{{product.image.url}}"
+                    <a href=""><img class="card-img-top" src="{{product.image.url}}"
                                                                 alt="..."/></a>
                     <!-- Product details-->
                     <div class="card-body">
