--- a/app/templates/app/order_characteristic.html
+++ b/app/templates/app/order_characteristic.html
@@ -11,4 +11,16 @@
         <th scope="col">Общая цена</th>
     </tr>
     </thead>
+    <tbody>
+    {%for basketproduct in basket.products.all%}
+
+    <tr>
+        <th scope="row"><strong>{{basketproduct.product.title}}</strong></th>
+        <td class="w-25"><img class="img-fluid" src="{{basketproduct.product.image.url}}" alt=""></td>
+        <td>{{basketproduct.product.price}}</td>
+        <td>{{basketproduct.quantity}}</td>
+        <td>{{basketproduct.final_price}}</td>
+    </tr>
+    {%endfor%}
+    </tbody>
 </table>
